fix: code blocks wrap text instead of expanding horizontally

--- a/market.html
+++ b/market.html
@@ -78,8 +78,7 @@
 
         details.method { margin:8px 0; overflow:hidden; }
         details.method summary { cursor:pointer; font-weight:700; font-size:12px; padding:8px 10px; background:linear-gradient(135deg,#ffe0ec,#ffd0df); border-bottom:1px dashed #bbb; }
-        pre.code { margin:0; padding:10px; background:#101318 !important; color:#e8edf3 !important; overflow-x:auto; overflow-y:hidden; max-width:100%; white-space:pre; font-size:11px; line-height:1.45; border-radius: 0 0 8px 8px; -webkit-overflow-scrolling:touch; }
-        details.method { max-width:100%; overflow:hidden; }
+        pre.code { margin:0; padding:10px; background:#101318 !important; color:#e8edf3 !important; overflow-x:hidden; max-width:100%; white-space:pre-wrap; word-break:break-all; font-size:11px; line-height:1.45; border-radius: 0 0 8px 8px; }
         .kw{color:#ff7ab6;font-weight:700;} .fn{color:#7dcfff;} .var{color:#c3e88d;} .num{color:#f7c873;} .addr{color:#82aaff;}
 
         .how-it-works-grid { display:grid; gap:12px; }
